# gnome-latex

./: NEWS  README  configure.ac
data/: org.gnome.gnome-latex.appdata.xml.in  org.gnome.gnome-latex.gschema.xml.in
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
docs/reference/: gnome-latex-docs.xml  gnome-latex-sections.txt
help/: Makefile.am
help/C/: synctex.page
help/cs/: cs.po
help/da/: da.po
help/hu/: hu.po
help/pl/: pl.po
help/sv/: sv.po
help/uk/: uk.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  es.po  hu.po  id.po  lt.po  nl.po  pl.po  pt_BR.po  ro.po  sr.po  sv.po  tr.po  uk.po
src/: Makefile.am  app_settings.vala  bottom_panel.vala  document.vala  document_tab.vala  document_view.vala  factory.vala  glatex_app.vala  latex_menu.vala  main.vala  main_window.vala  preferences_dialog.vala  search.vala  side_panel.vala  utils.vala
src/liblatexila/: Makefile.am  latexila-app.c  latexila-app.h  latexila-buffer.c  latexila-buffer.h  latexila-build-tool.c  latexila-build-tools-personal.c  latexila-factory.c  latexila-factory.h  latexila-init.c  latexila-init.h  latexila-latex-commands.c  latexila-latex-commands.h  latexila-settings.c  latexila-settings.h  latexila-synctex.c  latexila-templates-personal.c  latexila-utils.c  latexila-utils.h  latexila-view.c  latexila-view.h  latexila.h
src/ui/: gnome-latex.adwaita.css  preferences_dialog.ui  ui.xml
vapi/: config.vapi
