SUBDIRS = 16x16 24x24

# Included in a GResource.
EXTRA_DIST = others

scalableicondir = $(datadir)/icons/hicolor/scalable/apps
dist_scalableicon_DATA = gnome-latex.svg

symbolicicondir = $(datadir)/icons/hicolor/symbolic/apps
dist_symbolicicon_DATA = gnome-latex-symbolic.svg

-include $(top_srcdir)/git.mk
